--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:17.3.2'
     //implementation 'com.google.firebase:firebase-admin:6.4.0'
     implementation files('libs/gson-2.8.2.jar')
+    implementation 'com.android.support:design:27.1.1'
 }
 apply plugin: 'com.google.gms.google-services'
